fixed bug text area in 90s version not display correctly on firefox

--- a/assets/css/style90.css
+++ b/assets/css/style90.css
@@ -411,6 +411,12 @@ form :nth-child(5){
     -webkit-appearance: none;
 }
 
+@supports (-moz-appearance:none) {
+    .contact-card form textarea { 
+        height: 80px;
+    } 
+}
+
 .contact-card input:focus-visible,
 .contact-card textarea:focus-visible{
     outline: .1px solid var(--background-gray);
